--- a/home.html
+++ b/home.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso MW</title>
-    </script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/header.css">
@@ -21,21 +23,27 @@
         <header>
             <div class="header_container">
                 <div class="header_menu">
-                    <img src="#" alt="menu">
+                    <a href=""><img src="/img/icones/menu_hamburguer.svg" alt="menu"></a>
                     <p>menu</p>
                 </div>
-                <input class="busca" type="text" name="" id="">
-                <img src="#" alt="logo">
+                <input class="busca" type="text" name="" id="" placeholder="O que está buscando?">
+                <a href="" class="link_inicio"><img src="/img/icones/Ellipse.svg" alt="logo"></a>
                 <div class="city_climate">
-                    <img src="#" alt="imagem ilustrativa de chuva">
-                    <p>Rio de Janeiro</p>
-                    <p>min 20°</p>
-                    <p>max 28°</p>
+                    <img src="/img/icones/chuva.svg" alt="imagem ilustrativa de chuva">
+                    <div class="container_temp">
+                        <p>Rio de Janeiro</p>
+                        <div class="previsao">
+                            <p>min 20°</p>
+                            <p>max 28°</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="options_users">
-                    <img src="#" alt="icone de notificação">
-                    <img src="#" alt="seta de opções">
-                    <img src="#" alt="foto do usuário logado">
+                    <img class="sino-options" src="/img/icones/sino.svg" alt="icone de notificação">
+                    <img class="arrow-options" src="/img/icones/arrow_down.svg" alt="seta de opções">
+                    <span class="image-user">
+                        <img src="/img/homem-2.jpg" alt="foto do usuário logado">
+                    </span>
                 </div>
             </div>
         </header>
