--- a/home.html
+++ b/home.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="/css/nav.css">
     <link rel="stylesheet" href="/css/home.css">
 
-</head>  
+</head>
 
 
 <body>
-    <div class="container">
-        <header>
+    <header>
+        <div class="container">
             <div class="header_container">
                 <div class="header_menu">
                     <a href=""><img src="/img/icones/menu_hamburguer.svg" alt="menu"></a>
@@ -46,32 +46,55 @@
                     </span>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
 
+    <div class="container">
         <nav>
-            <a href="">Notícias</a>
-            <a href="">Esportes</a>
-            <a href="">Entretenimento</a>
-            <a href="">Carros</a>
-            <a href="">TV e famosos</a>
-            <a href="">Planeta</a>
-            <a href="">Economia</a>
-            <a href="">Saúde</a>
-        </nav>
-
-        <main>
-
-        </main>
-
-        <footer>
-            <h3>Copyright 2020 - 2021 - Todos os direitos reservados S.A.</h3>
-            <img src="#" alt="logo">
-            <div>
-                <a href="">Política de Privacidade</a>
-                <a href="">Imprensa</a>
+            <div class="nav_content">
+                <a href="#">
+                    <h4>Notícias</h4>
+                </a>
+                <a href="#">
+                    <h4>Esportes</h4>
+                </a>
+                <a href="#">
+                    <h4>Entretenimento</h4>
+                </a>
+                <a href="#">
+                    <h4>Carros</h4>
+                </a>
+                <a href="#">
+                    <h4>TV e famosos</h4>
+                </a>
+                <a href="#">
+                    <h4>Planeta</h4>
+                </a>
+                <a href="#">
+                    <h4>Economia</h4>
+                </a>
+                <a href="#">
+                    <h4>Saúde</h4>
+                </a>
             </div>
-        </footer>
+        </nav>
     </div>
+
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div class="footer_content">
+            <p>Copyright 2020 - 2021 - Todos os direitos reservados S.A.</p>
+            <img src="/img/icones/Ellipse-white.svg" alt="logo">
+            <div class="links_footer">
+                <a href=""><p>Política de Privacidade</p></a>
+                <a href=""><p>Imprensa</p></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
