--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="container">
             <div class="header_container">
                 <div class="header_menu">
-                    <a href=""><img src="/img/icones/menu_hamburguer.svg" alt="menu"></a>
-                    <p>menu</p>
+                    <a href=""><img src="img/icones/menu_hamburguer.svg" alt="menu"></a>
+                    <p>TESTE</p>
                 </div>
                 <input class="busca" type="text" name="" id="" placeholder="O que está buscando?">
                 <a href="" class="link_inicio"><img src="/img/icones/Ellipse.svg" alt="logo"></a>
