--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/nav.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/home.css">
 
 </head>
 
@@ -23,13 +23,13 @@
         <div class="container">
             <div class="header_container">
                 <div class="header_menu">
-                    <a href=""><img src="img/icones/menu_hamburguer.svg" alt="menu"></a>
+                    <a href=""><img src="./img/icones/menu_hamburguer.svg" alt="menu"></a>
                     <p>TESTE</p>
                 </div>
                 <input class="busca" type="text" name="" id="" placeholder="O que está buscando?">
-                <a href="" class="link_inicio"><img src="/img/icones/Ellipse.svg" alt="logo"></a>
+                <a href="" class="link_inicio"><img src=".img/icones/Ellipse.svg" alt="logo"></a>
                 <div class="city_climate">
-                    <img src="/img/icones/chuva.svg" alt="imagem ilustrativa de chuva">
+                    <img src=".img/icones/chuva.svg" alt="imagem ilustrativa de chuva">
                     <div class="container_temp">
                         <p>Rio de Janeiro</p>
                         <div class="previsao">
@@ -39,10 +39,10 @@
                     </div>
                 </div>
                 <div class="options_users">
-                    <img class="sino-options" src="/img/icones/sino.svg" alt="icone de notificação">
-                    <img class="arrow-options" src="/img/icones/arrow_down.svg" alt="seta de opções">
+                    <img class="sino-options" src=".img/icones/sino.svg" alt="icone de notificação">
+                    <img class="arrow-options" src=".img/icones/arrow_down.svg" alt="seta de opções">
                     <span class="image-user">
-                        <img src="/img/homem-2.jpg" alt="foto do usuário logado">
+                        <img src=".img/homem-2.jpg" alt="foto do usuário logado">
                     </span>
                 </div>
             </div>
@@ -88,7 +88,7 @@
     <footer>
         <div class="footer_content">
             <p>Copyright 2020 - 2021 - Todos os direitos reservados S.A.</p>
-            <img src="/img/icones/Ellipse-white.svg" alt="logo">
+            <img src=".img/icones/Ellipse-white.svg" alt="logo">
             <div class="links_footer">
                 <a href=""><p>Política de Privacidade</p></a>
                 <a href=""><p>Imprensa</p></a>
