--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/destaque.css">
 
 </head>
 
@@ -24,7 +25,7 @@
             <div class="header_container">
                 <div class="header_menu">
                     <a href=""><img src="./img/icones/menu_hamburguer.svg" alt="menu"></a>
-                    <p>TESTE</p>
+                    <p>menu</p>
                 </div>
                 <input class="busca" type="text" name="" id="" placeholder="O que está buscando?">
                 <a href="" class="link_inicio"><img src="./img/icones/Ellipse.svg" alt="logo"></a>
@@ -80,9 +81,25 @@
         </nav>
     </div>
 
-
     <main>
+        <div class="container">
 
+            <div class="grid_template">
+                <div class="destaque_content">
+                <div class="capa_destaque">
+                    <h4>Covid-19</h4>
+                    <img src="./img/covid.jpg" alt="Capa de destaque">
+                </div>
+                <div class="carrossel_destaque">
+                    <p>Destaque</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p class="description_destaque">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                </div>
+                
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -90,8 +107,12 @@
             <p>Copyright 2020 - 2021 - Todos os direitos reservados S.A.</p>
             <img src="./img/icones/Ellipse-white.svg" alt="logo">
             <div class="links_footer">
-                <a href=""><p>Política de Privacidade</p></a>
-                <a href=""><p>Imprensa</p></a>
+                <a href="">
+                    <p>Política de Privacidade</p>
+                </a>
+                <a href="">
+                    <p>Imprensa</p>
+                </a>
             </div>
         </div>
     </footer>
