--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/destaque.css">
+    <link rel="stylesheet" href="./css/chamada_box.css">
 
 </head>
 
@@ -83,21 +84,50 @@
 
     <main>
         <div class="container">
-
             <div class="grid_template">
                 <div class="destaque_content">
-                <div class="capa_destaque">
-                    <h4>Covid-19</h4>
-                    <img src="./img/covid.jpg" alt="Capa de destaque">
+                    <div class="capa_destaque">
+                        <h4>Covid-19</h4>
+                        <img src="./img/covid.jpg" alt="Capa de destaque">
+                    </div>
+                    <a href="#">
+                        <div class="carrossel_destaque">
+                            <div class="carrossel_text_content">
+                                <p>Destaque</p>
+                                <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                                <p class="description_destaque">Lorem Ipsum has been the industry's standard dummy text ever
+                                    since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
+                            <div class="carrossel_setas">
+                                <span class="carrossel_prev">
+                                    <img src="./img/icones/Rectangle 1.png" alt="">
+                                </span>
+                                <span class="carrosel_next">
+                                    <img src="./img/icones/Rectangle 1.png" alt="">
+                                </span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="carrossel_destaque">
-                    <p>Destaque</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
-                    <p class="description_destaque">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+                <div class="container_chamada_box">
+                    <a href="#">
+                        <div class="chamada_box_destaque chamada_box_1">
+                            <img src="./img/pexels-luis-quintero-2833037.jpg" alt="">
+                            <h4>Esportes</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="chamada_box_destaque chamada_box_2">
+                            <img src="./img/pexels-pixabay-248547.jpg" alt="">
+                            <h4>Entretenimento</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        </div>
+                    </a>
+
                 </div>
-                </div>
-                
             </div>
         </div>
     </main>
