--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/destaque.css">
+    <link rel="stylesheet" href="./css/box_destaque.css">
     <link rel="stylesheet" href="./css/chamada_box.css">
 
 </head>
@@ -90,7 +91,7 @@
                         <h4>Covid-19</h4>
                         <img src="./img/covid.jpg" alt="Capa de destaque">
                     </div>
-                    <a href="#">
+                    <!-- <a href="#"> -->
                         <div class="carrossel_destaque">
                             <div class="carrossel_text_content">
                                 <p>Destaque</p>
@@ -108,7 +109,7 @@
                                 </span>
                             </div>
                         </div>
-                    </a>
+                    <!-- </a> -->
                 </div>
 
                 <div class="container_chamada_box">
@@ -128,7 +129,27 @@
                     </a>
 
                 </div>
+
             </div>
+            <div class="divisor" style="border-top: 1px solid #7e7e7e8e;"></div>                
+
+            <div class="grid_template_2">
+                <div class="container_chamada">
+                    <div class="chamada_box">
+                        <img src="./img/pexels-mica-asato-1198174.jpg" alt="">
+                        <div class="content_chamada">
+                            <h4>Entretenimento</h4>
+                            <h2>Lorem Ipsum has been the industry's standard dummy</h2>
+                            <div class="temp_leitura">
+                                <p>5 min. de leitura</p>
+                                <span></span>
+                                <p>há 15h horas</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 
